tests/sksl/errors/InvalidVersionDirective.glsl
### Compilation failed:

error: 1: invalid #version directive
#version 300 void test() {}
^^^^^^^^
1 error
